--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@auth0/angular-jwt": "^4.0.0",
     "ckeditor4-angular": "^1.1.0",
     "firebase": "^7.11.0",
     "ng-circle-progress": "^1.5.1",
